@@ -1,6 +1,6 @@
 # Distributed under the GNU General Public License version 2
 # Copyright 2003-2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/generic_stage_target.py,v 1.6 2004/07/06 13:48:00 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/generic_stage_target.py,v 1.7 2004/07/14 17:23:16 zhen Exp $
 
 """
 This class does all of the chroot setup, copying of files, etc. It is
@@ -335,10 +335,7 @@ class generic_stage_target(generic_target):
 	def clean(self):
 		destpath=self.settings["chroot_path"]
 		
-		cleanables=["/etc/resolv.conf","/var/tmp/*","/tmp/*","/root/*"]
-		if self.settings["target"] not in ["livecd-stage2"]:
-			# we don't need to clean up a livecd-stage2
-			cleanables.append("/usr/portage")
+		cleanables=["/etc/resolv.conf","/var/tmp/*","/tmp/*","/root/*","/usr/portage"]
 			
 		if self.settings["target"]=="stage1":
 			destpath+="/tmp/stage1root"
@@ -352,39 +349,8 @@ class generic_stage_target(generic_target):
 			print "Cleaning chroot: "+x+"..."
 			cmd("rm -rf "+destpath+x,"Couldn't clean "+x)
 		
-		if self.settings["target"]=="livecd-stage2":
-			
-			if self.settings.has_key("livecd/empty"):
-				
-				if type(self.settings["livecd/empty"])==types.StringType:
-					self.settings["livecd/empty"]=[self.settings["livecd/empty"]]
-				
-				for x in self.settings["livecd/empty"]:
-					myemp=self.settings["chroot_path"]+x
-					if not os.path.isdir(myemp):
-						print x,"not a directory or does not exist, skipping 'empty' operation."
-						continue
-					print "Emptying directory",x
-					# stat the dir, delete the dir, recreate the dir and set the proper perms and ownership
-					mystat=os.stat(myemp)
-					shutil.rmtree(myemp)
-					os.makedirs(myemp)
-					os.chown(myemp,mystat[ST_UID],mystat[ST_GID])
-					os.chmod(myemp,mystat[ST_MODE])
-			
-			if self.settings.has_key("livecd/rm"):	
-				
-				if type(self.settings["livecd/rm"])==types.StringType:
-					self.settings["livecd/rm"]=[self.settings["livecd/rm"]]
-				
-				for x in self.settings["livecd/rm"]:
-					# we're going to shell out for all these cleaning operations, so we get easy glob handling
-					print "livecd: removing "+x
-					os.system("rm -rf "+self.settings["chroot_path"]+x)
-		
-		if self.settings["target"]!="livecd-stage2":
-			cmd("/bin/bash "+self.settings["sharedir"]+"/targets/"+self.settings["target"]+\
-				"/"+self.settings["target"]+".sh clean","clean script failed.")
+		cmd("/bin/bash "+self.settings["sharedir"]+"/targets/"+self.settings["target"]+\
+			"/"+self.settings["target"]+".sh clean","clean script failed.")
 	
 	def preclean(self):
 		# cleanup after distcc
